--- a/gb/19/5/23/n11275124.md
+++ b/gb/19/5/23/n11275124.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bpewoh325/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>挺孕肚力推“温柔生产” 简嫚书包场赞助电影</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/1905230427512122-600x400.jpg" />
 <h6>简嫚书（中）包场力挺《祝我好好孕》试片、映后联访于5月23日在台北举行。左为导演陈育青，右为导演苏钰婷。（黄宗茂／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年05月23日讯】（大纪元记者马维芬综合报导）现年30岁的<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E7%AE%80%E5%AB%9A%E4%B9%A6.md#1">简嫚书</a>于2017年结婚，现育有一女“<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E4%BA%91%E5%A4%A7.md#1">云大</a>”，22日刚宣布怀上第2胎的她，今（23）日更现身电影《<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E7%A5%9D%E6%88%91%E5%A5%BD%E5%A5%BD%E5%AD%95.md#1">祝我好好孕</a>》包场，原来她先前看过电影的相关报导后，便默默赞助包场支持这部纪录片。</p>
-<figure id="attachment_11275147" style="width: 454px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/1905230427422122.jpg"><img class=" wp-image-11275147" title="简嫚书包场力挺《祝我好好孕》试片、映后联访" src="https://i.epochtimes.com/assets/uploads/2019/05/1905230427422122.jpg" alt="简嫚书包场力挺《祝我好好孕》试片、映后联访" width="454" b="661" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E7%AE%80%E5%AB%9A%E4%B9%A6.md#1">简嫚书</a>包场力挺《<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E7%A5%9D%E6%88%91%E5%A5%BD%E5%A5%BD%E5%AD%95.md#1">祝我好好孕</a>》试片、映后联访于2019年5月23日在台北举行。（黄宗茂／大纪元）</figcaption></figure>
+	<p>【大纪元2019年05月23日讯】（大纪元记者马维芬综合报导）现年30岁的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%AE%80%E5%AB%9A%E4%B9%A6.md#1">简嫚书</a>于2017年结婚，现育有一女“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BA%91%E5%A4%A7.md#1">云大</a>”，22日刚宣布怀上第2胎的她，今（23）日更现身电影《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A5%9D%E6%88%91%E5%A5%BD%E5%A5%BD%E5%AD%95.md#1">祝我好好孕</a>》包场，原来她先前看过电影的相关报导后，便默默赞助包场支持这部纪录片。</p>
+<figure id="attachment_11275147" aria-describedby="caption-attachment-11275147" style="width: 454px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/1905230427422122.jpg"><img class=" wp-image-11275147" title="简嫚书包场力挺《祝我好好孕》试片、映后联访" src="https://i.epochtimes.com/assets/uploads/2019/05/1905230427422122.jpg" alt="简嫚书包场力挺《祝我好好孕》试片、映后联访" width="454" b="661" /></a><figcaption id="caption-attachment-11275147" class="wp-caption-text"><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%AE%80%E5%AB%9A%E4%B9%A6.md#1">简嫚书</a>包场力挺《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A5%9D%E6%88%91%E5%A5%BD%E5%A5%BD%E5%AD%95.md#1">祝我好好孕</a>》试片、映后联访于2019年5月23日在台北举行。（黄宗茂／大纪元）</figcaption></figure>
 <p>简嫚书透露这次怀孕的状况，初期有孕吐反应，感觉不太舒服，但还好不太严重，差不多持续两个月，慢慢就舒缓多，“只要避开特定食物其实还好，像是酱油类或是较复杂的料理之类”，她还说其实第二胎来的比计划中“还早一点点”。</p>
-<p>谈及电影中纪录居家自然生产的过程，简嫚书表示在怀女儿<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E4%BA%91%E5%A4%A7.md#1">云大</a>时也考虑过这个方式，但考量家中长辈会担心，她也有跟妈妈讨论过，“后来决定为了不让家人担心，就选择到医院生产”。</p>
+<p>谈及电影中纪录居家自然生产的过程，简嫚书表示在怀女儿<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BA%91%E5%A4%A7.md#1">云大</a>时也考虑过这个方式，但考量家中长辈会担心，她也有跟妈妈讨论过，“后来决定为了不让家人担心，就选择到医院生产”。</p>
 <p>她也提到片中提到金句，“我是在生孩子，不是在生病！”简嫚书以个人经验力推，“‘生’孩子的过程很不愉快，就像是在‘生’病。”所以她很认同片中提倡的“温柔生产”理念。她觉得孕期有辛苦的一面也有美好的一面，更表示这部分妈妈知道外，“爸爸也应该要知道”。</p>
 <p>像是她怀第一胎时，知道自然产的过程会很痛，但更畏惧剖腹生产的疼痛，结果当初第一胎有发现胎位不正的情况，她很有可能要做剖腹。简嫚书说，后来跟肚里的胎儿谈话后，发现肚里有种大旋转的感觉，直到第三个月胎位就变正了。</p>
-<figure id="attachment_11275149" style="width: 453px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/1905230427362122.jpg"><img class=" wp-image-11275149" title="简嫚书包场力挺《祝我好好孕》试片、映后联访" src="https://i.epochtimes.com/assets/uploads/2019/05/1905230427362122.jpg" alt="简嫚书包场力挺《祝我好好孕》试片、映后联访" width="453" b="643" /></a><figcaption class="wp-caption-text">简嫚书包场力挺《祝我好好孕》试片、映后联访于2019年5月23日在台北举行。（黄宗茂／大纪元）</figcaption></figure>
+<figure id="attachment_11275149" aria-describedby="caption-attachment-11275149" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/1905230427362122.jpg"><img class=" wp-image-11275149" title="简嫚书包场力挺《祝我好好孕》试片、映后联访" src="https://i.epochtimes.com/assets/uploads/2019/05/1905230427362122.jpg" alt="简嫚书包场力挺《祝我好好孕》试片、映后联访" width="453" b="643" /></a><figcaption id="caption-attachment-11275149" class="wp-caption-text">简嫚书包场力挺《祝我好好孕》试片、映后联访于2019年5月23日在台北举行。（黄宗茂／大纪元）</figcaption></figure>
 <p>简嫚书透露怀上第2胎“云二”后，至今胖了5公斤，并说预产期是在9月中，目前工作也渐渐在减量。被问及宝宝的性别，简嫚书表示希望有惊喜，暂时没有揭晓，她笑说：“我老公觉得是女生，他说他这辈子就是要来还女人债的。”</p>
 <p>不过她也笑说云大对云二似乎颇有敌意，简嫚书模仿女儿当下拿到超音波照的样子，“她看了看就捏住，气到撕烂还揉一揉。”更说现在大家都知道她要当姊姊了，目前只有她还不知道。“我们现在是有开始教她认识姊姊这个词。”</p>
 <p>责任编辑：茉莉</p>
@@ -22,42 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/12/29/n8644262.md#1">简嫚书新恋情幸福 张书豪谈往事快喷泪</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/2/6/n8780409.md#1">简嫚书出演《天黑》 曝张书豪是“爱哭包”</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/5/12/n9134157.md#1">简嫚书新片讲日文 故事主角隐身台版预告里</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/7/27/n9468676.md#1">简嫚书结婚了！ “翻墙”脸书分享双喜</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/12/29/n8644262.md#1">简嫚书新恋情幸福 张书豪谈往事快喷泪</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/2/6/n8780409.md#1">简嫚书出演《天黑》 曝张书豪是“爱哭包”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/12/n9134157.md#1">简嫚书新片讲日文 故事主角隐身台版预告里</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/7/27/n9468676.md#1">简嫚书结婚了！ “翻墙”脸书分享双喜</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/18/n11528891.md#1" target="_blank">观雨堂主：中共对中国与世界的公开掠夺</a></li><li><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/26/n2976689.md#1" target="_blank">鲜为人知的马克思之六：信神的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12517575.md#1">【大陆新闻解毒】时事小品：中国人民组织起来了</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/28/n12437702.md#1">【思想领袖】林赛：美左派破坏圣像 犹如文革</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515233.md#1">【重播】最后冲刺 川普及夫人访宾州五地演讲</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513453.md#1">Rain与TWICE玩黑手党游戏 粉丝Momo共舞好紧张</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512257.md#1">崔智友产后5月速开工 抱着婴儿现身母爱爆棚</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/23/n11275124.htm">挺孕肚力推“温柔生产” 简嫚书包场赞助电影</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/23/n11275124.htm">挺孕肚力推“温柔生产” 简嫚书包场赞助电影</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bpewoh325/djy/blob/master/gb/19/5/23/n11275124.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/5/23/n11275124.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
